update homepage URL

--- a/po/be.po
+++ b/po/be.po
@@ -1369,7 +1369,7 @@ msgstr ""
 "  MAIL=URL            Разьмяшчэньне паштовай скрыні. Калі адсутнічае тып\n"
 "                      ужываецца лякальны тып \"file://\".\n"
 "\n"
-"Наведай http://www.icewm.org/ каб паведаміць пра памылкі, запатрабаваць\n"
+"Наведай https://ice-wm.org/ каб паведаміць пра памылкі, запатрабаваць\n"
 "падтрымкі, ці проста выказацца пра IceWM...\n"
 
 #: src/wmapp.cc:1401
