--- a/po/bg.po
+++ b/po/bg.po
@@ -1392,7 +1392,7 @@ msgstr ""
 "игнорира\n"
 "                      локалната \"file\" схема се приема.\n"
 "\n"
-"Посетете http://www.icewm.org/ за съобщения за грешки,предложения и "
+"Посетете https://ice-wm.org/ за съобщения за грешки,предложения и "
 "коментари...\n"
 
 #: src/wmapp.cc:1401
