--- a/po/el.po
+++ b/po/el.po
@@ -1504,7 +1504,7 @@ msgstr ""
 "παραληφθεί,\n"
 "                         θα υιοθετηθεί το τοπικό σχήμα «file».\n"
 "\n"
-"Δες το http://www.icewm.org/ για αναφορά δυσλειτουργιών, για αιτήματα "
+"Δες το https://ice-wm.org/ για αναφορά δυσλειτουργιών, για αιτήματα "
 "υποστήριξης, σχόλια...\n"
 
 #: src/wmapp.cc:1401
