--- a/po/mk.po
+++ b/po/mk.po
@@ -1395,7 +1395,7 @@ msgstr ""
 "зададено,\n"
 "                         се користи локалната шема „file“.\n"
 "\n"
-"Посете ја страницата http://www.icewm.org/ за да известите за бубачки,\n"
+"Посете ја страницата https://ice-wm.org/ за да известите за бубачки,\n"
 "за барања за поддршка, коментари итн...\n"
 
 #: src/wmapp.cc:1401
