--- a/man/icewm-toolbar.pod
+++ b/man/icewm-toolbar.pod
@@ -116,7 +116,10 @@ Locations for the toolbar options file are as follows:
 
 =head1 SEE ALSO
 
-L<icewm(1)>.
+L<icewm(1)>,
+L<icewm-programs(5)>,
+L<icewm-menu(5)>,
+L<icewm-menu-fdo(1)>.
 
 =head1 AUTHOR
 
