A few fixes/improvements of the German translation

--- a/po/de.po
+++ b/po/de.po
@@ -419,10 +419,9 @@ msgstr "Konnte nicht geöffnet werden."
 msgid "Failed to create a temporary file"
 msgstr "Erstellung einer temporären Datei ist fehlgeschlagen"
 
-#: src/icehelp.cc:2110
-#, c-format
+#: src/icehelp.cc:2108
 msgid "Failed to execute system(%s) (%d)"
-msgstr "Ausführung vom System(%s) (%d) ist fehlgeschlagen"
+msgstr "Ausführung vom system(%s) ist fehlgeschlagen (%d)"
 
 #: src/icehelp.cc:2133
 #, c-format
@@ -516,7 +515,7 @@ msgstr ""
 #: src/icehelp.cc:2259
 #, c-format
 msgid "Ignoring option '%s'"
-msgstr "Option '%s' ignorieren"
+msgstr "Option '%s' wird ignoriert"
 
 #: src/icelist.cc:80
 msgid "List View"
@@ -783,12 +782,12 @@ msgstr ""
 #: src/icesm.cc:120
 #, c-format
 msgid "Unknown option '%s'"
-msgstr "Unbekannte Aktion: '%s'"
+msgstr "Unbekannte Option: '%s'"
 
 #: src/icesm.cc:308
 #, c-format
 msgid "%s exited with status %d."
-msgstr "%s wurde mit Status %d beendet."
+msgstr "%s endete mit Status %d."
 
 #: src/icesm.cc:314
 #, c-format
@@ -816,7 +815,7 @@ msgstr "IceWM-Absturz-Reaktion"
 #: src/icesound.cc:219 src/icesound.cc:327 src/icesound.cc:631
 #, c-format
 msgid "Playing sample #%d (%s)"
-msgstr "Spiele Beispiel #%d (%s)"
+msgstr "Spiele Sample #%d (%s)"
 
 #: src/icesound.cc:337
 #, c-format
@@ -878,14 +877,14 @@ msgstr "Fehler <%d> beim Hochladen von `%s:%s`"
 #: src/icesound.cc:518
 #, c-format
 msgid "Sample <%d> uploaded as `%s:%s'"
-msgstr "Beispiel <%d> wurde als `%s:%s` hochgeladen"
+msgstr "Sample <%d> wurde als »%s:%s« hochgeladen"
 
-#: src/icesound.cc:576
+#: src/icesound.cc:569
 #, c-format
 msgid "Playing sample #%d: %d"
-msgstr "Spiele Beispiel #%d: %d"
+msgstr "Spiele Sample #%d: %d"
 
-#: src/icesound.cc:651
+#: src/icesound.cc:644
 #, c-format
 msgid "ao_open_live failed with %d"
 msgstr "ao_open_live schlug mit %d fehl"
@@ -1339,7 +1338,7 @@ msgstr "_Herunterfahren"
 #. TRANSLATORS: This means "energy saving mode" or "suspended system". Not "interrupt". Not "hibernate".
 #: src/wmapp.cc:520 src/wmdialog.cc:75
 msgid "_Sleep mode"
-msgstr "_Schlaf-Modus"
+msgstr "Schlaf-_Modus"
 
 #: src/wmapp.cc:525
 msgid "Restart _Icewm"
@@ -1625,7 +1624,7 @@ msgstr "_Abmelden..."
 
 #: src/wmdialog.cc:81
 msgid "_Restart icewm"
-msgstr "IceWM _neu starten"
+msgstr "_IceWM neu starten"
 
 #: src/wmdialog.cc:82 src/wmprog.cc:799 src/wmtaskbar.cc:285
 #: src/wmtaskbar.cc:288
