--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,15 @@
-icewm -- authors file.  2018-12-20
+icewm -- authors file.  2019-01-05
 
-Author: Benny Siegert <bsiegert@gmail.com>
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: openSUSE Weblate <weblate-noreply@opensuse.org>
+Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
+Author: Alessio Adamo <alessio.adamo@gmail.com>
+Author: nikoss <nikoss@users.noreply.github.com>
+Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
+Author: scootergrisen <scootergrisen@gmail.com>
+Author: Dingzhong Chen <wsxy162@gmail.com>
+Author: Code7R <Code7R@users.noreply.github.com>
+Author: Benny Siegert <bsiegert@gmail.com>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: Freek de Kruijf <freek@opensuse.org>
@@ -9,24 +17,18 @@ Author: Aleš Kastner <alkas@volny.cz>
 Author: David Medina <medipas@gmail.com>
 Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
-Author: openSUSE Weblate <weblate-noreply@opensuse.org>
 Author: YunSeok Choi <xein@naver.com>
 Author: varmanishant <nishant.varma@gmail.com>
-Author: Dingzhong Chen <wsxy162@gmail.com>
 Author: Brian Bidulock <bidulock@openss7.org>
-Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: Brian Bidulock <bidulock@openss7.com>
 Author: Antoine Belvire <antoine.belvire@opensuse.org>
 Author: Eduard Bloch <blade@debian.org>
 Author: Sarah Kriesch <ada.lovelace@gmx.de>
 Author: jc sl <trcs@gmx.com>
 Author: Sir Mobus Gochfulshigan Dorphin Esquire XXIII <celestialtuba@gmail.com>
-Author: scootergrisen <scootergrisen@gmail.com>
 Author: Yi-Jyun Pan <pan93412@gmail.com>
 Author: Marguerite Su <i@marguerite.su>
-Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
 Author: ldarby2 <42494548+ldarby2@users.noreply.github.com>
-Author: Code7R <Code7R@users.noreply.github.com>
 Author: Nikolas Nyby <nikolas@gnu.org>
 Author: Matthew Wong <mawong@redhat.com>
 Author: Ad Soyad <kalemlik100@yandex.com>
@@ -80,7 +82,6 @@ Author: Ivan Borzenkov <ivan.borzenkov@gmail.com>
 Author: Tetralet <tetralet@gmail.com>
 Author: Dmitriy Khanzhin <jinn@altlinux.org>
 Author: Дмитрий Ханжин <dmitriy.khanzhin@gmail.com>
-Author: nikoss <nikoss@users.noreply.github.com>
 Author: Shyukri Shyukriev <shshyukriev@suse.com>
 Author: Oliver Kurz <okurz@suse.de>
 Author: Reedych <linux.user2003@gmail.com>
